# twitter-clone

./: .env.example  Cargo.toml  diesel.toml
migrations/2025-05-06-055502_create_users/: down.sql  up.sql
migrations/2025-05-07-005546_create_posts/: down.sql  up.sql
migrations/2025-05-07-012056_create_medias/: down.sql  up.sql
migrations/2025-05-07-013841_create_post_medias/: down.sql  up.sql
src/: main.rs  schema.rs
src/extractors/: auth_extractor.rs
src/handlers/: auth_handler.rs  mod.rs  post_handler.rs
src/lib/: jwt.rs
src/models/: media.rs  mod.rs  post.rs  post_media.rs  user.rs
src/models/dto/: create_post_dto.rs  mod.rs
src/repositories/: mod.rs
src/repositories/postgres/: post_repository.rs  user_repository.rs
src/repositories/traits/: post_repository.rs  user_repository.rs
src/routes/: auth.rs  mod.rs  post.rs
src/services/: auth_service.rs
